# AI_Powered_ChatBot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: chat.db  main.py
app/static/: main.js  style.css
app/templates/: index.html  login.html
